--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -22,13 +22,16 @@
   margin-left: 8%;
   overflow-x: hidden;
   transition: background 0.2s, color 0.2s, font-weight 0.2s, padding-left 0.2s;
-  width: 70%;
+  width: 100%;
 }
 .main .container .title .rating {
+  align-items: flex-start;
+  display: flex;
+  justify-content: flex-start;
   font-size: 4vh;
   padding-left: 2%;
   transition: color 0.2s;
-  width: 10%;
+  width: 20%;
 }
 .main .container .title:first-of-type {
   margin-top: 3%;
