--- a/src/styles/about.module.scss
+++ b/src/styles/about.module.scss
@@ -25,13 +25,15 @@
             margin-left: 8%;
             overflow-x: hidden;
             transition: background 0.2s, color 0.2s, font-weight 0.2s, padding-left 0.2s;
-            width: 70%;
+            width: 100%;
 
             .rating {
+                @include flex;
+
                 font-size: 4vh;
                 padding-left: 2%;
                 transition: color 0.2s;
-                width: 10%;
+                width: 20%;
             }
 
             &:first-of-type {
